Remove card header color from profile page and fix footer width on mobile

--- a/styles/sb-admin.css
+++ b/styles/sb-admin.css
@@ -341,7 +341,7 @@ footer.sticky-footer {
   position: absolute;
   right: 0;
   bottom: 0;
-  width: calc(100% - 90px);
+  width: calc(100% - 62px);
   height: 80px;
   background-color: #e9ecef;
 }
